KOPANO_TEST_USER ?= user1
KOPANO_TEST_PASSWORD ?= user1
KOPANO_TEST_IMAP_HOST ?= localhost
KOPANO_TEST_IMAP_PORT ?= 143
PYTEST ?= pytest


.PHONY: test
test:
	KOPANO_TEST_USER=${KOPANO_TEST_USER} KOPANO_TEST_PASSWORD=${KOPANO_TEST_PASSWORD} \
	  KOPANO_TEST_IMAP_HOST=${KOPANO_TEST_IMAP_HOST} KOPANO_TEST_IMAP_PORT=${KOPANO_TEST_IMAP_PORT} \
	  $(PYTEST) tests/ --junitxml=test.xml -o junit_suite_name=gateway
