MAPI_CONFIG_PATH = ${top_srcdir}/provider/client:${top_srcdir}/provider/contacts
PYTHONPATH = ${top_srcdir}/swig/python/.libs:${top_srcdir}/swig/python/
KOPANO_TEST_USER ?= user1
KOPANO_TEST_PASSWORD ?= user1
KOPANO_TEST_POP3_USER ?= user4
KOPANO_TEST_POP3_PASSWORD ?= user4
KOPANO_TEST_IMAP_HOST ?= localhost
KOPANO_TEST_IMAP_PORT ?= 143
KOPANO_TEST_POP3_HOST ?= localhost
KOPANO_TEST_POP3_PORT ?= 110
PYTEST ?= pytest


.PHONY: test
test:
	MAPI_CONFIG_PATH=${MAPI_CONFIG_PATH} PYTHONPATH=${PYTHONPATH}  \
	KOPANO_TEST_USER=${KOPANO_TEST_USER} KOPANO_TEST_PASSWORD=${KOPANO_TEST_PASSWORD} \
	  KOPANO_TEST_IMAP_HOST=${KOPANO_TEST_IMAP_HOST} KOPANO_TEST_IMAP_PORT=${KOPANO_TEST_IMAP_PORT} \
	  KOPANO_TEST_POP3_HOST=${KOPANO_TEST_POP3_HOST} KOPANO_TEST_POP3_PORT=${KOPANO_TEST_POP3_PORT} \
	  KOPANO_TEST_POP3_USER=${KOPANO_TEST_POP3_USER} KOPANO_TEST_POP3_PASSWORD=${KOPANO_TEST_POP3_PASSWORD} \
	  $(PYTEST) ${srcdir}/tests/ --junitxml=test.xml -o junit_suite_name=gateway
